--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <springfox-version>2.8.0</springfox-version>
         <javax-jax-version>2.2.11</javax-jax-version>
         <jackson-nullable-version>0.1.0</jackson-nullable-version>
+        <spring-version>5.2.8.RELEASE</spring-version>
     </properties>
 
     <dependencies>
@@ -27,7 +28,7 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-webmvc</artifactId>
-            <version>5.2.8.RELEASE</version>
+            <version>${spring-version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -36,7 +37,14 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-web</artifactId>
-            <version>5.2.8.RELEASE</version>
+            <version>${spring-version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>${spring-version}</version>
+            <scope>test</scope>
         </dependency>
 
         <dependency>
