--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 server.port=8080
-spring.main.allow-bean-definition-overriding=true
-spring.profiles.active=production
 
-
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/offloading_db
+spring.datasource.username=postgres
+spring.datasource.password=password
