--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,1 +1,6 @@
 spring.profiles.active=test
+
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/offloading_test_db
+spring.datasource.username=postgres
+spring.datasource.password=password
