Database is now automatically created based on created entity classes.

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,6 +1,11 @@
 spring.profiles.active=test
 
+spring.jpa.database=postgresql
+spring.jpa.database-platform = org.hibernate.dialect.PostgreSQL94Dialect
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/offloading_test_db
 spring.datasource.username=postgres
 spring.datasource.password=password
+
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=create
