--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,11 @@
 server.port=8080
 
+spring.jpa.database=postgresql
+spring.jpa.database-platform = org.hibernate.dialect.PostgreSQL94Dialect
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/offloading_db
 spring.datasource.username=postgres
 spring.datasource.password=password
+
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=create-drop
