--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.jpa.database-platform = org.hibernate.dialect.PostgreSQL94Dialect
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/offloading_db
 spring.datasource.username=postgres
-spring.datasource.password=password
+spring.datasource.password=Password
 
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=create
