--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,5 @@ spring.datasource.password=Password
 
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=create
+
+spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
