--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -10,3 +10,5 @@ spring.datasource.password=Password
 
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=create
+
+spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
