--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,14 @@
     </properties>
 
     <dependencies>
+        <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.6</version>
+        </dependency>
+
+
 
         <!-- Data layer dependencies -->
         <!-- https://mvnrepository.com/artifact/org.springframework.data/spring-data-jpa -->
