Files can now be downloaded/updloaded from employer client.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,4 +10,10 @@ spring.datasource.password=Password
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=create
 
+#server.jetty.max-http-form-post-size=431472500 doesn't work i think.. -Philip
+server.tomcat.max-http-form-post-size=100MB
+logging.file.max-size=100MB
+spring.servlet.multipart.max-file-size=100MB
+spring.servlet.multipart.file-size-threshold=100MB
+
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
