--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.datasource.username=postgres
 spring.datasource.password=Password
 
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=create
 
 #server.jetty.max-http-form-post-size=431472500 doesn't work i think.. -Philip
 server.tomcat.max-http-form-post-size=100MB
