Upload results now compares to other results and updates status accordingly.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.datasource.password=Password
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=create
 
-#server.jetty.max-http-form-post-size=431472500 doesn't work i think.. -Philip
+server.jetty.max-http-form-post-size=100MB
 server.tomcat.max-http-form-post-size=100MB
 logging.file.max-size=100MB
 spring.servlet.multipart.max-file-size=100MB
